[gd_scene load_steps=6 format=3 uid="uid://ktn845vos8qe"]

[ext_resource type="Script" uid="uid://c60177svo8by6" path="res://Menus/pause_menu.gd" id="1_qnjt8"]
[ext_resource type="PackedScene" uid="uid://bdmlspewkwo5s" path="res://Menus/MainMenu.tscn" id="2_hnfxo"]
[ext_resource type="PackedScene" uid="uid://0lj3qejewwsp" path="res://Menus/SettingsMenu.tscn" id="2_o0cs5"]
[ext_resource type="FontFile" uid="uid://c6ur18f7svqw1" path="res://Assets/Fonts/Kubasta/Kubasta.ttf" id="3_wpn1c"]

[sub_resource type="LabelSettings" id="LabelSettings_t2718"]
font = ExtResource("3_wpn1c")
font_size = 32

[node name="PauseMenu" type="Control" node_paths=PackedStringArray("settings_menu", "pause_menu_control")]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_qnjt8")
main_menu = ExtResource("2_hnfxo")
settings_menu = NodePath("SettingsMenu")
pause_menu_control = NodePath("PauseMenuControl")

[node name="PauseMenuControl" type="Control" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="PauseMenuControl"]
process_mode = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="PauseMenuControl/PanelContainer"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PauseMenuContainer" type="VBoxContainer" parent="PauseMenuControl/PanelContainer/CenterContainer"]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2

[node name="PauseLabel" type="Label" parent="PauseMenuControl/PanelContainer/CenterContainer/PauseMenuContainer"]
process_mode = 3
layout_mode = 2
text = "PAUSED"
label_settings = SubResource("LabelSettings_t2718")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Seperator" type="MarginContainer" parent="PauseMenuControl/PanelContainer/CenterContainer/PauseMenuContainer"]
layout_mode = 2
theme_override_constants/margin_top = 50

[node name="ResumeButton" type="Button" parent="PauseMenuControl/PanelContainer/CenterContainer/PauseMenuContainer"]
process_mode = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("3_wpn1c")
text = "Resume
"

[node name="Seperator2" type="MarginContainer" parent="PauseMenuControl/PanelContainer/CenterContainer/PauseMenuContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="SettingsButton" type="Button" parent="PauseMenuControl/PanelContainer/CenterContainer/PauseMenuContainer"]
process_mode = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("3_wpn1c")
text = "Settings
"

[node name="Seperator3" type="MarginContainer" parent="PauseMenuControl/PanelContainer/CenterContainer/PauseMenuContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="MainMenuButton" type="Button" parent="PauseMenuControl/PanelContainer/CenterContainer/PauseMenuContainer"]
process_mode = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("3_wpn1c")
text = "Main Menu
"

[node name="SettingsMenu" parent="." node_paths=PackedStringArray("volume_sliders") instance=ExtResource("2_o0cs5")]
process_mode = 3
visible = false
layout_mode = 1
volume_sliders = {
"master_volume": NodePath("PanelContainer/CenterContainer/SettingsMenuContainer/MasterVolume/MasterSlider"),
"music_volume": NodePath("PanelContainer/CenterContainer/SettingsMenuContainer/MusicVolume/MusicSlider")
}

[connection signal="mouse_entered" from="PauseMenuControl/PanelContainer/CenterContainer/PauseMenuContainer/ResumeButton" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="PauseMenuControl/PanelContainer/CenterContainer/PauseMenuContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="mouse_entered" from="PauseMenuControl/PanelContainer/CenterContainer/PauseMenuContainer/SettingsButton" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="PauseMenuControl/PanelContainer/CenterContainer/PauseMenuContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="mouse_entered" from="PauseMenuControl/PanelContainer/CenterContainer/PauseMenuContainer/MainMenuButton" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="PauseMenuControl/PanelContainer/CenterContainer/PauseMenuContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="return_control" from="SettingsMenu" to="." method="_on_settings_menu_return_control"]
